# axum-prometheus-demo

./: Cargo.toml
src/: main.rs
